<resources>
    <string name="app_name">FoodManagmentSystem</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="admin">Admin</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user">New User ?</string>
    <string name="already_have_an_account">Already have an account</string>
</resources>