<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/Secondary"
    tools:context=".Activities.SignIn">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/background_content2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="330dp"
                android:layout_height="330dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:cardBackgroundColor="@color/Secondary"
                android:layout_gravity="center"
                app:cardCornerRadius="32dp"
                android:paddingTop="122dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/Primary"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:gravity="center"
                    android:layout_margin="22dp"
                    android:padding="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_horizontal"
                        app:boxStrokeColor="@color/Primary"
                        android:hint="@string/email_or_phone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/Black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:boxStrokeColor="@color/Primary"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/Black"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:paddingTop="190dp"
                    android:paddingBottom="22dp">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/SignIn"
                        android:layout_width="150dp"
                        android:layout_height="52dp"
                        android:text="@string/sign_in"
                        android:textSize="18sp"
                        android:backgroundTint="@color/Primary"
                        android:textColor="@color/White"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:cornerRadius="10dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="372dp"
        android:layout_height="320dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/sign_logo"/>
</RelativeLayout>